--- a/src/main/resources/templates/blog/amaze/detail.html
+++ b/src/main/resources/templates/blog/amaze/detail.html
@@ -41,10 +41,16 @@
     <div class="am-g am-g-fixed blog-fixed">
         <div class="am-u-lg-12 am-u-sm-12">
             <article class="am-article blog-article-p article-trigger">
+                <div class="article-body">
+                <img th:src="${blogDetailVO.blogCoverImage}" alt="">
+                </div>
                 <div id="post-content" class="am-article-bd article-body">
                     <th:block th:utext="${blogDetailVO.blogContent}"/>
                     <aside class="blog-rights clearfix">
                         <p>本站文章除注明转载/出处外，皆为作者原创，欢迎转载，但未经作者同意必须保留此段声明，且在文章页面明显位置给出原文连接，否则保留追究法律责任的权利。</p>
+                    </aside>
+                    <aside class="comments">
+                        <p> 本页面被<th:block th:utext="${blogDetailVO.readCount}"/>次访问</p>
                     </aside>
                 </div>
             </article>
