--- a/src/main/resources/templates/blog/amaze/keyword-list.html
+++ b/src/main/resources/templates/blog/amaze/keyword-list.html
@@ -11,8 +11,8 @@
                                 <div class="pull-left">
                                     <div class="blog-flex-center">
                                         <div class="blog-flex0">
-                                            <img th:src="@{${configurations.get('yourAvatar')}}" alt=""
-                                                 class="link avatar avatar-image">
+<!--                                            <img th:src="@{${configurations.get('yourAvatar')}}" alt=""-->
+<!--                                                 class="link avatar avatar-image">-->
                                         </div>
                                         <div class="author-lockup blog-flex1">
                                             <a class="link" href="javascript:;"
